# Quart-Nextcord

./: .readthedocs.yaml  .readthedocs.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  environment.yaml  index.rst  introduction.rst  requirements.txt
quart-nextcloud/: __init__.py  client.py
quart-nextcloud/models/: base.py  connections.py  user.py
quart_nextcloud/: exceptions.py  utils.py
quart_nextcord/: __init__.py  _http.py  client.py  configs.py  exceptions.py
quart_nextcord/models/: guild.py  user.py
tests/: __init__.py  test_app.py
