[metadata] 
    name = Quart-Nextcord 
    version = attr: quart_nextcord.__version__ 
    url = https://github.com/InvalidLenni/Quart-Nextcord 
    author = InvalidLenni 
    classifiers=[ 
         'License :: OSI Approved :: MIT License', 
         'Development Status :: 5 - Production/Stable', 
         'Environment :: Web Environment', 
         'Programming Language :: Python :: 3.8', 
         'Programming Language :: Python :: 3.9', 
         'Programming Language :: Python :: 3.10',
         'Programming Language :: Python :: 3.11'
     ]
    license = MIT 
    license_file = LICENSE 
    description = Discord OAuth2 extension for Quart.
    long_description = file: README.md 
    long_description_content_type = text/markdown; charset=UTF-8; variant=GFM 
    project_urls = 
        Documentation = https://quart-nextcord.rtfd.io/
        Issue Tracker = https://github.com/InvalidLenni/Quart-Nextcord/issues/ 
      
      
[options] 
 packages = quart_nextcord, 
 install_requires = 
   quart==0.17.0 
   pyjwt==2.4.0 
   aiohttp==3.8.1 
   oauthlib==3.2.0 
   nextcord==2.0.0a10 
   cachetools==5.2.0 
   setuptools==62.3.2 
   Async-OAuthlib==0.0.9
      
 python_requires = >=3.8

[option.extras_require]
docs = sphinx==1.8.3
